force-app/main/default/objects/RetailStock__c/RetailStock__c.object-meta.xml
<CustomObject>
    <description>ソコリテの在庫車両を管理するために使用</description>
    <label>小売在庫</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>小売在庫No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>