force-app/main/default/objects/RetailStock__c/fields/arrival_date__c.field-meta.xml
<CustomField>
    <fullName>arrival_date__c</fullName>
    <formula>IF(ISBLANK(PurchaseOpportunity__r.ArrivalDate__c),  PurchaseOpportunity__r.Arrival_date_retail__c , PurchaseOpportunity__r.ArrivalDate__c)</formula>
    <label>入庫日</label>
    <type>Date</type>
</CustomField>