force-app/main/default/objects/RetailStock__c/fields/arrival_location__c.field-meta.xml
<CustomField>
    <fullName>arrival_location__c</fullName>
    <formula>PurchaseOpportunity__r.ArrivalLocation__c</formula>
    <label>入庫場所</label>
    <type>Text</type>
</CustomField>