force-app/main/default/objects/RetailStock__c/fields/back_order__c.field-meta.xml
<CustomField>
    <fullName>back_order__c</fullName>
    <formula>retail_opportunity__r.back_order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>成約時のリテール商談から取得します</inlineHelpText>
    <label>バックオーダー</label>
    <type>Checkbox</type>
</CustomField>