force-app/main/default/objects/RetailStock__c/fields/car_model_text__c.field-meta.xml
<CustomField>
    <fullName>car_model_text__c</fullName>
    <formula>Mst_model__r.maker__r.Name &amp;&quot; &quot;&amp; Mst_model__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車種名</label>
    <type>Text</type>
</CustomField>