force-app/main/default/objects/RetailStock__c/fields/car_num__c.field-meta.xml
<CustomField>
    <fullName>car_num__c</fullName>
    <description>集計管理システム連携項目</description>
    <label>車台番号</label>
    <length>50</length>
    <type>Text</type>
</CustomField>