force-app/main/default/objects/RetailStock__c/fields/change_amount_request_date__c.field-meta.xml
<CustomField>
    <fullName>change_amount_request_date__c</fullName>
    <label>掲載金額変更依頼日</label>
    <type>Date</type>
</CustomField>