force-app/main/default/objects/RetailStock__c/fields/commercial_amount__c.field-meta.xml
<CustomField>
    <fullName>commercial_amount__c</fullName>
    <label>業販価格</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>