force-app/main/default/objects/RetailStock__c/fields/commercial_site_published__c.field-meta.xml
<CustomField>
    <fullName>commercial_site_published__c</fullName>
    <defaultValue>false</defaultValue>
    <label>業販サイト掲載済</label>
    <type>Checkbox</type>
</CustomField>