force-app/main/default/objects/RetailStock__c/fields/contract_or_auction_date__c.field-meta.xml
<CustomField>
    <fullName>contract_or_auction_date__c</fullName>
    <description>レポート分析用項目</description>
    <formula>IF(ISBLANK( other_AA_sale_date__c ),  retail_sales_date__c , other_AA_sale_date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>成約日or他社オク売却日</label>
    <type>Date</type>
</CustomField>