force-app/main/default/objects/RetailStock__c/fields/days_since_payment__c.field-meta.xml
<CustomField>
    <fullName>days_since_payment__c</fullName>
    <formula>IF(OR(ISPICKVAL(phase__c , &quot;成約済&quot;), ISPICKVAL(phase__c , &quot;他社オク売却済み&quot;)), null, TODAY() - payment_date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>支払後経過日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>