force-app/main/default/objects/RetailStock__c/fields/delivery_date__c.field-meta.xml
<CustomField>
    <fullName>delivery_date__c</fullName>
    <description>納車日を入力。売上計上のベースになる。</description>
    <label>納車日</label>
    <type>Date</type>
</CustomField>