force-app/main/default/objects/RetailStock__c/fields/exclude_days__c.field-meta.xml
<CustomField>
    <fullName>exclude_days__c</fullName>
    <description>長期休暇と重なった時フローでインクリメント
経過日数からこの数値が減算される</description>
    <label>経過日数除外カウント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>