force-app/main/default/objects/RetailStock__c/fields/extension__c.field-meta.xml
<CustomField>
    <fullName>extension__c</fullName>
    <defaultValue>false</defaultValue>
    <description>在庫期日の延長を承認された場合に承認者がチェックを付ける。権限セットで編集権限を付与する。山本</description>
    <label>延長フラグ</label>
    <type>Checkbox</type>
</CustomField>