force-app/main/default/objects/RetailStock__c/fields/first_payment_date__c.field-meta.xml
<CustomField>
    <fullName>first_payment_date__c</fullName>
    <label>初回入金日</label>
    <type>Date</type>
</CustomField>