force-app/main/default/objects/RetailStock__c/fields/first_receiving_stock_date__c.field-meta.xml
<CustomField>
    <fullName>first_receiving_stock_date__c</fullName>
    <label>第一入庫日</label>
    <type>Date</type>
</CustomField>