force-app/main/default/objects/RetailStock__c/fields/first_receiving_stock_location__c.field-meta.xml
<CustomField>
    <fullName>first_receiving_stock_location__c</fullName>
    <label>第一入庫場所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>