force-app/main/default/objects/RetailStock__c/fields/googlemap_publication__c.field-meta.xml
<CustomField>
    <fullName>googlemap_publication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>掲載状況</description>
    <label>GoogleMap</label>
    <type>Checkbox</type>
</CustomField>