force-app/main/default/objects/RetailStock__c/fields/goonet_publication__c.field-meta.xml
<CustomField>
    <fullName>goonet_publication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>掲載状況</description>
    <label>グーネット</label>
    <type>Checkbox</type>
</CustomField>