force-app/main/default/objects/RetailStock__c/fields/include_sales__c.field-meta.xml
<CustomField>
    <fullName>include_sales__c</fullName>
    <formula>NOT(AND(ISPICKVAL( purchase_type__c , &quot;委託&quot;), ISPICKVAL( sales_type__c , &quot;AA&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売上をソコリテに含める</label>
    <type>Checkbox</type>
</CustomField>