force-app/main/default/objects/RetailStock__c/fields/last_receipt_date__c.field-meta.xml
<CustomField>
    <fullName>last_receipt_date__c</fullName>
    <description>DWHとの連携で使用。OBICからロット番号をキーに入金日が連携される。山本</description>
    <label>最終入金日</label>
    <type>Date</type>
</CustomField>