force-app/main/default/objects/RetailStock__c/fields/last_ship_date__c.field-meta.xml
<CustomField>
    <fullName>last_ship_date__c</fullName>
    <description>買取商談の最終出庫フラグが付いている時の入出庫日を表示</description>
    <formula>IF( PurchaseOpportunity__r.last_ship_flg__c ,  PurchaseOpportunity__r.ArrivalDate__c ,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>最終出庫日</label>
    <type>Date</type>
</CustomField>