force-app/main/default/objects/RetailStock__c/fields/lot_num__c.field-meta.xml
<CustomField>
    <fullName>lot_num__c</fullName>
    <description>DWHとの連携で使用。山本</description>
    <externalId>true</externalId>
    <label>ロット番号</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>