force-app/main/default/objects/RetailStock__c/fields/media_for_sales__c.field-meta.xml
<CustomField>
    <fullName>media_for_sales__c</fullName>
    <description>販売成約時、リテール商談からコピー
手動で入力できるようにもする</description>
    <label>売れた媒体</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>カーセンサー</fullName>
            </value>
            <value>
                <fullName>グーネット</fullName>
            </value>
            <value>
                <fullName>GoogleMap</fullName>
            </value>
            <value>
                <fullName>オートサーバー</fullName>
            </value>
            <value>
                <fullName>オークネット</fullName>
            </value>
            <value>
                <fullName>クイッククイック</fullName>
            </value>
            <value>
                <fullName>リユース</fullName>
            </value>
            <value>
                <fullName>テレビCM</fullName>
            </value>
            <value>
                <fullName>ラジオCM</fullName>
            </value>
            <value>
                <fullName>新聞・雑誌</fullName>
            </value>
            <value>
                <fullName>ソコカラWebサイト</fullName>
            </value>
            <value>
                <fullName>看板を見て</fullName>
            </value>
            <value>
                <fullName>イベント</fullName>
            </value>
            <value>
                <fullName>SNS</fullName>
            </value>
            <value>
                <fullName>動画広告</fullName>
            </value>
            <value>
                <fullName>Youtube公式チャンネル</fullName>
            </value>
            <value>
                <fullName>知人からの紹介</fullName>
            </value>
            <value>
                <fullName>リピート</fullName>
            </value>
            <value>
                <fullName>社内福利厚生</fullName>
            </value>
            <value>
                <fullName>社員紹介(取引先)</fullName>
            </value>
            <value>
                <fullName>社員紹介(家族・友人・知人)</fullName>
            </value>
            <value>
                <fullName>顧客紹介</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>店舗</fullName>
                <isActive>false</isActive>
                <label>店舗</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>