force-app/main/default/objects/RetailStock__c/fields/model_year__c.field-meta.xml
<CustomField>
    <fullName>model_year__c</fullName>
    <label>年式</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Model_Year</valueSetName>
    </valueSet>
</CustomField>