force-app/main/default/objects/RetailStock__c/fields/Mst_model__c.field-meta.xml
<CustomField>
    <fullName>Mst_model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>車種</label>
    <referenceTo>Mst_Models__c</referenceTo>
    <relationshipLabel>小売在庫</relationshipLabel>
    <relationshipName>RetailStock</relationshipName>
    <type>Lookup</type>
</CustomField>