force-app/main/default/objects/RetailStock__c/fields/Mst_Types__c.field-meta.xml
<CustomField>
    <fullName>Mst_Types__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>型式</label>
    <referenceTo>Mst_Types__c</referenceTo>
    <relationshipLabel>小売在庫</relationshipLabel>
    <relationshipName>RetailStock</relationshipName>
    <type>Lookup</type>
</CustomField>