force-app/main/default/objects/RetailStock__c/fields/option_discount_target__c.field-meta.xml
<CustomField>
    <fullName>option_discount_target__c</fullName>
    <label>オプション値引対象</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ドラレコ</fullName>
            </value>
            <value>
                <fullName>ETC</fullName>
            </value>
            <value>
                <fullName>コーティング</fullName>
            </value>
            <value>
                <fullName>タイヤ</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>