force-app/main/default/objects/RetailStock__c/fields/option_discount_target_other__c.field-meta.xml
<CustomField>
    <fullName>option_discount_target_other__c</fullName>
    <label>オプション値引対象(その他)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>