force-app/main/default/objects/RetailStock__c/fields/order_url__c.field-meta.xml
<CustomField>
    <fullName>order_url__c</fullName>
    <label>注文書URL</label>
    <type>Url</type>
</CustomField>