force-app/main/default/objects/RetailStock__c/fields/other_AA_sale_date__c.field-meta.xml
<CustomField>
    <fullName>other_AA_sale_date__c</fullName>
    <label>他社オク売却日</label>
    <type>Date</type>
</CustomField>