force-app/main/default/objects/RetailStock__c/fields/payment_amount__c.field-meta.xml
<CustomField>
    <fullName>payment_amount__c</fullName>
    <label>入金予定金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>