force-app/main/default/objects/RetailStock__c/fields/payment_date__c.field-meta.xml
<CustomField>
    <fullName>payment_date__c</fullName>
    <formula>PurchaseOpportunity__r.PaymentDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>支払い日</label>
    <type>Date</type>
</CustomField>