force-app/main/default/objects/RetailStock__c/fields/payment_history__c.field-meta.xml
<CustomField>
    <fullName>payment_history__c</fullName>
    <label>入金履歴</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>