force-app/main/default/objects/RetailStock__c/fields/payment_name__c.field-meta.xml
<CustomField>
    <fullName>payment_name__c</fullName>
    <inlineHelpText>半角文字のみ入力できます</inlineHelpText>
    <label>入金名義</label>
    <length>255</length>
    <type>Text</type>
</CustomField>