force-app/main/default/objects/RetailStock__c/fields/payment_name_loan__c.field-meta.xml
<CustomField>
    <fullName>payment_name_loan__c</fullName>
    <label>入金名義(ローン会社)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ｶ)ｵﾘｺﾌﾟﾛﾀﾞｸﾄﾌｱｲﾅﾝｽ</fullName>
            </value>
            <value>
                <fullName>ﾌﾟﾚﾐｱ(ｶ</fullName>
            </value>
            <value>
                <fullName>ｶ)ｼﾞﾔﾂｸｽ</fullName>
            </value>
            <value>
                <fullName>ｶ) ｱﾌﾟﾗｽ</fullName>
            </value>
            <value>
                <fullName>SMBCﾌｱｲﾅﾝｽｻ-ﾋﾞｽ(ｶ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>