force-app/main/default/objects/RetailStock__c/fields/payment_type__c.field-meta.xml
<CustomField>
    <fullName>payment_type__c</fullName>
    <label>入金種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>現金</fullName>
            </value>
            <value>
                <fullName>ローン</fullName>
            </value>
            <value>
                <fullName>頭金+ローン</fullName>
            </value>
            <value>
                <fullName>相殺</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>