force-app/main/default/objects/RetailStock__c/fields/phase__c.field-meta.xml
<CustomField>
    <fullName>phase__c</fullName>
    <label>フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未掲載</fullName>
                <default>true</default>
                <label>未掲載</label>
            </value>
            <value>
                <fullName>掲載中</fullName>
            </value>
            <value>
                <fullName>商談中</fullName>
            </value>
            <value>
                <fullName>成約済</fullName>
            </value>
            <value>
                <fullName>他社オク回送待ち</fullName>
            </value>
            <value>
                <fullName>他社オク出品待ち</fullName>
            </value>
            <value>
                <fullName>他社オク出品済み</fullName>
            </value>
            <value>
                <fullName>他社オク売却済み</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>