force-app/main/default/objects/RetailStock__c/fields/pricing_check__c.field-meta.xml
<CustomField>
    <fullName>pricing_check__c</fullName>
    <description>プライシング確認依頼で使用
値を変え、プライシングへの依頼、プライシングからの回答を示す。</description>
    <label>プライシング確認</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>確認待ち</fullName>
            </value>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>NG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>