force-app/main/default/objects/RetailStock__c/fields/pricing_memo__c.field-meta.xml
<CustomField>
    <fullName>pricing_memo__c</fullName>
    <description>プライシング依頼の際、プライシング課が使用</description>
    <inlineHelpText>255文字まで</inlineHelpText>
    <label>プライシングメモ</label>
    <type>TextArea</type>
</CustomField>