force-app/main/default/objects/RetailStock__c/fields/pricing_recommend_amount__c.field-meta.xml
<CustomField>
    <fullName>pricing_recommend_amount__c</fullName>
    <description>プライシング課が推奨する業販価格</description>
    <label>プライシング推奨業販価格</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>