force-app/main/default/objects/RetailStock__c/fields/provisional_gross_profit__c.field-meta.xml
<CustomField>
    <fullName>provisional_gross_profit__c</fullName>
    <formula>payment_amount__c + payment_amount_loan__c -  PurchaseOpportunity__r.TotalPayment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>暫定粗利</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>