force-app/main/default/objects/RetailStock__c/fields/publication_end_date__c.field-meta.xml
<CustomField>
    <fullName>publication_end_date__c</fullName>
    <label>掲載終了日</label>
    <type>Date</type>
</CustomField>