force-app/main/default/objects/RetailStock__c/fields/publication_request_date__c.field-meta.xml
<CustomField>
    <fullName>publication_request_date__c</fullName>
    <label>掲載依頼日</label>
    <type>Date</type>
</CustomField>