force-app/main/default/objects/RetailStock__c/fields/publication_total_price__c.field-meta.xml
<CustomField>
    <fullName>publication_total_price__c</fullName>
    <label>掲載総額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>