force-app/main/default/objects/RetailStock__c/fields/pucblication_date__c.field-meta.xml
<CustomField>
    <fullName>pucblication_date__c</fullName>
    <inlineHelpText>販売業務課への依頼後、掲載作業が完了すると自動で入力されます。
依頼をしない場合は手動で入力してください。</inlineHelpText>
    <label>掲載日</label>
    <type>Date</type>
</CustomField>