force-app/main/default/objects/RetailStock__c/fields/purchase_type__c.field-meta.xml
<CustomField>
    <fullName>purchase_type__c</fullName>
    <label>仕入種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ユーザ買取</fullName>
            </value>
            <value>
                <fullName>ユーザ下取</fullName>
            </value>
            <value>
                <fullName>業販</fullName>
            </value>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>委託</fullName>
            </value>
            <value>
                <fullName>リユース買取</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>