force-app/main/default/objects/RetailStock__c/fields/PurchaseOpportunity__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOpportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>買取商談</label>
    <referenceTo>PurchaseOpportunity__c</referenceTo>
    <relationshipLabel>小売在庫</relationshipLabel>
    <relationshipName>RetailStock</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>