force-app/main/default/objects/RetailStock__c/fields/reason_for_sales__c.field-meta.xml
<CustomField>
    <fullName>reason_for_sales__c</fullName>
    <label>売れた媒体(旧)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>社内</fullName>
            </value>
            <value>
                <fullName>紹介</fullName>
            </value>
            <value>
                <fullName>グーネット</fullName>
            </value>
            <value>
                <fullName>カーセンサー</fullName>
            </value>
            <value>
                <fullName>オートサーバー</fullName>
            </value>
            <value>
                <fullName>オークネット</fullName>
            </value>
            <value>
                <fullName>クイッククイック</fullName>
            </value>
            <value>
                <fullName>直来店</fullName>
            </value>
            <value>
                <fullName>ナビクル</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>