force-app/main/default/objects/RetailStock__c/fields/receiving_stock_date__c.field-meta.xml
<CustomField>
    <fullName>receiving_stock_date__c</fullName>
    <inlineHelpText>セレクト岸和田に入庫された日付が、ヤードシステムより自動で連携されます</inlineHelpText>
    <label>セレクト入庫日</label>
    <type>Date</type>
</CustomField>