force-app/main/default/objects/RetailStock__c/fields/request_to_sales__c.field-meta.xml
<CustomField>
    <fullName>request_to_sales__c</fullName>
    <formula>IF(NOT(AND( carsensor_publication__c ,  goonet_publication__c ,  googlemap_publication__c ,  autoserver_publication__c ,  aucnet_publication__c ,  quickquick_publication__c )), 
IF(NOT(ISBLANK(publication_cancel_request_date__c)), &quot;掲載取り下げ&quot;,
    IF(NOT(ISBLANK(change_amount_request_date__c)), &quot;掲載金額変更&quot;,
        IF(NOT(ISBLANK( publication_request_date__c )), &quot;新規掲載&quot;, &quot;&quot;)
    )
), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>販売業務課_依頼内容</label>
    <type>Text</type>
</CustomField>