force-app/main/default/objects/RetailStock__c/fields/retail_opportunity__c.field-meta.xml
<CustomField>
    <fullName>retail_opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>成約時に自動入力されます</inlineHelpText>
    <label>リテール商談</label>
    <referenceTo>RetailOpportunity__c</referenceTo>
    <relationshipLabel>小売在庫</relationshipLabel>
    <relationshipName>retail_stock</relationshipName>
    <type>Lookup</type>
</CustomField>