force-app/main/default/objects/RetailStock__c/fields/retail_order_date__c.field-meta.xml
<CustomField>
    <fullName>retail_order_date__c</fullName>
    <label>小売注文日</label>
    <type>Date</type>
</CustomField>