force-app/main/default/objects/RetailStock__c/fields/retail_sales_date__c.field-meta.xml
<CustomField>
    <fullName>retail_sales_date__c</fullName>
    <label>成約日</label>
    <type>Date</type>
</CustomField>