force-app/main/default/objects/RetailStock__c/fields/sales_staff__c.field-meta.xml
<CustomField>
    <fullName>sales_staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>販売担当</label>
    <referenceTo>User</referenceTo>
    <relationshipName>retail_stock</relationshipName>
    <type>Lookup</type>
</CustomField>