force-app/main/default/objects/RetailStock__c/fields/sales_type__c.field-meta.xml
<CustomField>
    <fullName>sales_type__c</fullName>
    <label>売上種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>解体</fullName>
            </value>
            <value>
                <fullName>業販</fullName>
            </value>
            <value>
                <fullName>小売</fullName>
            </value>
            <value>
                <fullName>福利厚生</fullName>
            </value>
            <value>
                <fullName>長在</fullName>
                <isActive>false</isActive>
                <label>長在</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>