force-app/main/default/objects/RetailStock__c/fields/scheduled_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>scheduled_delivery_date__c</fullName>
    <label>納車予定日</label>
    <type>Date</type>
</CustomField>