force-app/main/default/objects/RetailStock__c/fields/sold_data_check__c.field-meta.xml
<CustomField>
    <fullName>sold_data_check__c</fullName>
    <formula>IF(TEXT( sales_type__c ) = &quot;AA&quot;, False,
IF(TEXT( sales_type__c ) = &quot;長在&quot;, False,
IF(TEXT( sales_type__c ) = &quot;解体&quot;, False,
OR(
    ISBLANK( retail_sales_date__c ),
    ISBLANK( delivery_date__c ),
    TEXT( reason_for_sales__c ) = &quot;&quot;,
    TEXT( sales_type__c ) = &quot;&quot;
))))</formula>
    <label>売上情報未入力チェック</label>
    <type>Checkbox</type>
</CustomField>