force-app/main/default/objects/RetailStock__c/fields/total_payment_excluding_tax__c.field-meta.xml
<CustomField>
    <fullName>total_payment_excluding_tax__c</fullName>
    <formula>PurchaseOpportunity__r.TotalPayment_ExcludingTax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>買取商談の支払合計(税抜)を表示</inlineHelpText>
    <label>支払合計(税抜)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>