force-app/main/default/objects/RetailStock__c/fields/total_price_initial__c.field-meta.xml
<CustomField>
    <fullName>total_price_initial__c</fullName>
    <label>掲載総額初期値</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>