force-app/main/default/objects/RetailStock__c/fields/url_car_sensor__c.field-meta.xml
<CustomField>
    <fullName>url_car_sensor__c</fullName>
    <label>カーセンサーURL</label>
    <type>Url</type>
</CustomField>