force-app/main/default/objects/RetailStock__c/fields/url_for_publication_image__c.field-meta.xml
<CustomField>
    <fullName>url_for_publication_image__c</fullName>
    <label>掲載画像用URL</label>
    <type>Url</type>
</CustomField>