force-app/main/default/objects/RetailStock__c/fields/url_goo_net__c.field-meta.xml
<CustomField>
    <fullName>url_goo_net__c</fullName>
    <label>グーネットURL</label>
    <type>Url</type>
</CustomField>