force-app/main/default/objects/RetailStock__c/fields/vehicle_inspection_expiration_date__c.field-meta.xml
<CustomField>
    <fullName>vehicle_inspection_expiration_date__c</fullName>
    <label>車検満了日</label>
    <type>Date</type>
</CustomField>