force-app/main/default/objects/RetailStock__c/fields/vehicle_price_initial__c.field-meta.xml
<CustomField>
    <fullName>vehicle_price_initial__c</fullName>
    <label>車両本体価格初期値</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>