force-app/main/default/objects/RetailStock__c/validationRules/Check_HankakuKana.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_HankakuKana</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( payment_name__c , &quot;^[ｦ-ﾟA-Z0-9\\-\\.\\)\\( ]*$&quot;)) ||
REGEX(payment_name__c , &quot;.*[ｧｨｩｪｫｯｬｭｮ].*&quot;)</errorConditionFormula>
    <errorDisplayField>payment_name__c</errorDisplayField>
    <errorMessage>入金名義は半角ｶﾀｶﾅと記号「.」「-」「)」「(」のみ入力可能です。半角ｶﾀｶﾅの小文字は入力不可です。</errorMessage>
</ValidationRule>